--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -1,21 +1,63 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Authentication page</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<form action="/login" method="POST">-->
+<!--    <h1>Login page</h1>-->
+<!--    <label for="login">Login: </label>-->
+<!--    <input type="text" id="login" name="login">-->
+<!--    <br>-->
+<!--    <label for="password">Password: </label>-->
+<!--    <input type="text" id="password" name="password">-->
+<!--    <br>-->
+<!--    <button type="submit">Log in</button>-->
+<!--</form>-->
+<!--<br>-->
+<!--<a href="/weather" methods="Get">Weather Viewer</a>-->
+<!--</body>-->
+<!--</html>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Authentication page</title>
+    <title>Weather Viewer – Sign In</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<form action="/login" method="POST">
-    <h1>Login page</h1>
-    <label for="login">Login: </label>
-    <input type="text" id="login" name="login">
-    <br>
-    <label for="password">Password: </label>
-    <input type="text" id="password" name="password">
-    <br>
-    <button type="submit">Log in</button>
-</form>
-<br>
-<a href="/weather" methods="Get">Weather Viewer</a>
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <div class="weather-logo"></div>
+        </div>
+    </div>
+
+    <h2 class="text-center mb-5">Sign In</h2>
+
+    <div class="row justify-content-center">
+        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+            <form action="#" th:action="@{/login}" method="post" class="mt-4">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" required value=""/>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" required value=""/>
+                </div>
+
+                <input type="hidden" name="redirect_to" value="http://localhost/"/>
+
+                <button type="submit" class="btn btn-primary w-100 mt-3">Sign In</button>
+                <p class="mt-2 text-center">Don't have an account? <a href="/register">Sign up here</a></p>
+            </form>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
