--- a/src/main/webapp/WEB-INF/views/main-page.html
+++ b/src/main/webapp/WEB-INF/views/main-page.html
@@ -2,43 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Header</title>
+    <title>Weather Viewer – Homepage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h2>Main page</h2>
 
-<div th:if="${user != null}">
-    <p th:text="${user.login}">Имя пользователя</p> <a href="/logout" methods="Get">Log out</a>
-</div>
-<div th:unless="${user != null}">
-    <a href="/register" methods="Get">Register</a>
-    <br>
-    <a href="/login" methods="Get">Log in</a>
-</div>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            Weather Tracker
+        </a>
+        <div class="d-flex align-items-center">
+            <div th:if="${user != null}">
+                <span class="navbar-text me-3" th:text="${user.username}"></span>
+                <a th:href="@{/logout}" class="btn btn-outline-danger">Sign out</a>
+            </div>
+            <div th:unless="${user != null}">
+                <a href="/register" methods="Get">Sign up</a>
+                <br>
+                <a href="/login" methods="Get">Sign in</a>
+            </div>
+        </div>
+    </div>
+</nav>
 
-<br>
+<section id="page-content">
+    <div class="container mt-4">
+        <form th:action="@{/locations}" method="get">
+            <div class="d-flex my-4">
+                <div class="input-group location-search-input-group me-3">
+                    <input class="form-control" type="text" name="name" placeholder="Enter location" required>
+                    <button class="btn btn-outline-secondary btn-sm clear-input-button" type="button"
+                        onclick="this.previousElementSibling.value=''">
+                    &times;
+                    </button>
+                </div>
+                <button type="submit" class="btn btn-outline-success">Search</button>
+            </div>
+        </form>
 
-<form th:action="@{/locations}" method="get">
-    <input type="text" name="Search" placeholder="Search..." th:value="${search}">
-    <button type="submit">Search</button>
-</form>
+        <div class="row">
+            <div th:each="location : ${locations}" class="col-12 col-lg-3 col-md-6 mb-4">
 
-<div th:each="location : ${locations}">
-    <form th:action="@{/deleteLocation/{userId}(userId=${user?.id ?: 0})}" method="GET">
-        <input type="hidden" name="lon" th:value="${location['lon']}"/>
-        <input type="hidden" name="lat" th:value="${location['lat']}"/>
+                    <div class="card h-100 position-relative weather-card">
 
-        <p>Name: <span th:text="${location['name']} "></span></p>
-        <p>Temperature: <span th:text="${location['Temperature']} + '°C'"></span></p>
-        <p>Feels like <span th:text="${location['Feels like']}"></span></p>
-        <button type="submit">Delete</button>
-    </form>
-</div>
+                            <div class="position-absolute weather-card-delete-form">
+                                <form th:action="@{/deleteLocation}" method="get">
 
+                                    <input type="hidden" name="lon" th:value="${location['lon']}"/>
+                                    <input type="hidden" name="lat" th:value="${location['lat']}"/>
+                                    <button type="submit" class="btn-close" aria-label="Delete"></button>
+                                </form>
 
+                            </div>
 
+                        <img class="card-img-top img-fluid"
+                             th:src="@{'https://openweathermap.org/img/wn/' + ${location['icon']} +'@4x.png'}"
+                            alt="Weather icon">
 
+                            <div class="card-body">
+                                <h1 class="card-text" th:text="${location['Temperature']} + '°C'"></h1>
+                                <h3 class="card-text" th:text="${location['name']}"></h3>
+                                <p class="card-text mb-1">Feels like <span th:text="${location['Feels like']}"></span></p>
+                                <h3 class="card-text" th:text="${location['lat']}"></h3>
 
+                            </div>
+                    </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 border-top">
+    <div class="px-4">
+        <span>© Weather Viewer, project from <a href="https://zhukovsd.github.io/java-backend-learning-course/">zhukovsd/java-backend-learning-course</a> roadmap.</span>
+    </div>
+</footer>
 
 </body>
 </html>
