--- a/src/main/webapp/WEB-INF/views/registration.html
+++ b/src/main/webapp/WEB-INF/views/registration.html
@@ -1,22 +1,69 @@
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org" lang="eng">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title></title>-->
+<!--</head>-->
+<!--<body>-->
+<!--    <h1>Registration Page</h1>-->
+<!--    <form action="/register" method="POST">-->
+<!--        <label for="login">Login: </label>-->
+<!--        <input type="text" id="login" name="login">-->
+<!--&lt;!&ndash;        <div th:if="${#fields.hasErrors('login')}" class="text-danger" th:errors="*{login}"></div>&ndash;&gt;-->
+<!--        <br>-->
+<!--        <label for="password">Password: </label>-->
+<!--        <input type="text" id="password" name="password">-->
+<!--&lt;!&ndash;        <div th:if="${#fields.hasErrors('password')}" class="text-danger" th:errors="*{password}">Password Error</div>&ndash;&gt;-->
+<!--        <br>-->
+<!--        <button type="submit">Register</button>-->
+<!--    </form>-->
+<!--</body>-->
+
+<!--</html>-->
+
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="eng">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Weather Viewer – Sign Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Registration Page</h1>
-    <form action="/register" method="POST">
-        <label for="login">Login: </label>
-        <input type="text" id="login" name="login">
-<!--        <div th:if="${#fields.hasErrors('login')}" class="text-danger" th:errors="*{login}"></div>-->
-        <br>
-        <label for="password">Password: </label>
-        <input type="text" id="password" name="password">
-<!--        <div th:if="${#fields.hasErrors('password')}" class="text-danger" th:errors="*{password}">Password Error</div>-->
-        <br>
-        <button type="submit">Register</button>
-    </form>
-</body>
 
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <div class="weather-logo"></div>
+        </div>
+    </div>
+
+    <h2 class="text-center mb-5">Sign Up</h2>
+
+    <div class="row justify-content-center">
+        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+            <form action="#" th:action="@{/register}" method="post" th:object="${user}" class="mt-4">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" th:field="*{username}" required value=""/>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" th:field="*{password}" required value=""/>
+                </div>
+                <div class="mb-3">
+                    <label for="repeat-password" class="form-label">Repeat password</label>
+                    <input type="password" class="form-control" id="repeat-password" name="repeatPassword" required value=""/>
+                </div>
+
+                <input type="hidden" name="redirect_to" value="http://localhost/"/>
+
+                <button type="submit" class="btn btn-primary w-100 mt-3">Sign Up</button>
+                <p class="mt-2 text-center">Already have an account? <a href="/login">Sign in here</a></p>
+            </form>
+        </div>
+    </div>
+</div>
+
+</body>
 </html>
