--- a/src/main/webapp/WEB-INF/views/searchResult.html
+++ b/src/main/webapp/WEB-INF/views/searchResult.html
@@ -2,40 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Search Results</title>
+    <title>Weather Viewer – Homepage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div th:if="${user != null}">
-    <p th:text="${user.login}">Имя пользователя</p> <a href="/logout" methods="Get">Log out</a>
-</div>
-<div th:unless="${user != null}">
-    <a href="/register" methods="Get">Register</a>
-    <br>
-    <a href="/login" methods="Get">Log in</a>
-</div>
-<br>
-<form th:action="@{/locations}" th:method="GET">
-    <input type="text" name="Search" placeholder="Search..." th:value="${search}">
-    <input type="hidden" name="UserId" th:value="${user?.id ?: 0}">
-    <button type="submit">Search</button>
-</form>
-<br>
-<div th:each="location : ${locations}">
-    <form th:action="@{/addLocation}" th:method="POST">
-        <input type="hidden" name="lon" th:value="${location['lon']}">
-        <input type="hidden" name="lat" th:value="${location['lat']}">
-        <input type="hidden" name="country" th:value="${location['country']}">
-        <input type="hidden" name="name" th:value="${location['name']}">
-        <input type="hidden" name="UserId" th:value="${user?.id ?: 0}">
-        <span th:text="${search}"></span>
-        <p>Longitude: <span th:text="${location['lon']} "></span></p>
-        <p>Latitude:  <span th:text="${location['lat']}"></span></p>
-        <p>Country: <span th:text="${location['country']}"></span></p>
-        <p>Name: <span th:text="${location['name']}"></span></p>
-        <button type="submit">Add</button>
-    </form>
-</div>
 
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            Weather Tracker
+        </a>
+        <div class="d-flex align-items-center">
+            <div th:if="${user != null}">
+                <span class="navbar-text me-3" th:text="${user.username}"></span>
+                <a th:href="@{/logout}" class="btn btn-outline-danger">Sign out</a>
+            </div>
+            <div th:unless="${user != null}">
+                <a href="/register" methods="Get">Sign up</a>
+                <br>
+                <a href="/login" methods="Get">Sign in</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<section id="page-content">
+    <div class="container mt-4">
+        <form th:action="@{/locations}" method="get">
+            <div class="d-flex my-4">
+                <div class="input-group location-search-input-group me-3">
+                    <input class="form-control" type="text" name="name" placeholder="Enter location" th:value="${name}"
+                           required>
+                    <button class="btn btn-outline-secondary btn-sm clear-input-button" type="button"
+                            onclick="this.previousElementSibling.value=''">
+                        &times;
+                    </button>
+                </div>
+                <button type="submit" class="btn btn-outline-success">Search</button>
+            </div>
+        </form>
+
+        <div>
+            <h2>Locations:</h2>
+            <div class="row">
+                <div th:each="location : ${locations}" class="col-12 col-lg-3 col-md-6 mb-4">
+
+                        <div class="card h-100">
+                            <div class="card-body d-flex flex-column">
+                                    <span th:text="${name}"></span>
+                                    <h5 class="card-title" th:text="${location['country']}"></h5>
+                                    <p class="card-text mb-1" th:text="${location['lat']}"></p>
+                                    <p class="card-text mb-1" th:text="${location['lon']}"></p>
+                                    <p class="card-text mb-1" th:text="${location['name']}"></p>
+                                    <div class="mt-auto">
+                                        <form th:action="@{/addLocation}" method="POST">
+                                            <input type="hidden" name="lon" th:value="${location['lon']}">
+                                            <input type="hidden" name="lat" th:value="${location['lat']}">
+                                            <input type="hidden" name="country" th:value="${location['country']}">
+                                            <input type="hidden" name="name" th:value="${location['name']}">
+                                            <input type="hidden" name="UserId" th:value="${user?.id ?: 0}">
+                                            <button type="submit" class="btn btn-primary w-100">Add</button>
+                                        </form>
+                                    </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 border-top">
+    <div class="px-4">
+        <span>© Weather Viewer, project from <a href="https://zhukovsd.github.io/java-backend-learning-course/">zhukovsd/java-backend-learning-course</a> roadmap.</span>
+    </div>
+</footer>
 
 </body>
 </html>
